@@ -126,7 +126,7 @@ class PayToEdit(CompletionTextEdit, ScanQRTextEdit):
         self.payto_address = None
         if len(lines) == 1:
             data = lines[0]
-            if data.startswith("bitcoin:"):
+            if data.startswith("bitcoindiamond:"):
                 self.scan_f(data)
                 return
             try:
@@ -200,7 +200,7 @@ class PayToEdit(CompletionTextEdit, ScanQRTextEdit):
 
     def qr_input(self):
         data = super(PayToEdit,self).qr_input()
-        if data.startswith("bitcoin:"):
+        if data.startswith("bitcoindiamond:"):
             self.scan_f(data)
             # TODO: update fee
 
