@@ -571,9 +571,9 @@ class Network(util.DaemonThread):
                 self.config.mempool_fees = result
                 self.notify('fee_histogram')
         elif method == 'blockchain.estimatefee':
-            print(result)
             if error is None and result > 0:
                 i = params[0]
+                fee = int(result * COIN)
                 self.config.update_fee_estimates(i, fee)
                 self.print_error("fee_estimates[%d]" % i, fee)
                 self.notify('fee')
